apps/jertest/phpapp/deployment.yml
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "phpapp"
  namespace: "jer-test"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "phpapp"
    spec:
      containers:
      - name: nginx
        image: pcodk/nginx
        ports:
        - containerPort: 80
          name: "web"
        volumeMounts:
         - mountPath: /var/www/docroot
           name: workdir
      - name: php
        image: pcodk/poc-php:7.2-fpm
        imagePullPolicy: Always
        volumeMounts:
         - mountPath: /var/www/docroot
           name: workdir
#         - mountPath: /var/www/persistens
#           name: datadir

      volumes:
       - name: workdir
         emptyDir: {}
#       - name: datadir
#         persistentVolumeClaim:
#           claimName: "test-claim"
