apps/jertest/phpapp/svc.yml
---

apiVersion: "v1"
kind: Service
metadata:
  name: "phpapp"
  namespace: "jer-test"
spec:
  selector:
    app: "phpapp"
  type: "ClusterIP"
  ports:
  - protocol: "TCP"
    name: "web"
    port: 80
    targetPort: web
